--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>com.typesafe</groupId>
+            <artifactId>config</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+
     </dependencies>
 
 </project>
