--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
             <version>1.3.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.greenrobot</groupId>
+            <artifactId>eventbus</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
